--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Micro Repair Café
 description: Jouw apparaat, onze missie - een groenere toekomst!
 
-url: https://microrepaircafe.nl/waarom/
+url: https://microrepaircafe.nl/
 paginate_path: "content/page:num/"
 permalink: content/:title/
 
