--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Micro Repair Café
 description: Jouw apparaat, onze missie - een groenere toekomst!
 
-url: https://microrepaircafe.nl/
-paginate_path: "page:num/"
-permalink: title/
+url: https://microrepaircafe.nl
+paginate_path: "content/page:num/"
+permalink: content/:title/
 
 # Header Option
 # header: large
